force-app/main/default/objects/Transaction__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <referenceTo>Beneficiary__c</referenceTo>
    <relationshipLabel>Transactions (Beneficiary)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>