force-app/main/default/objects/Transaction__c/fields/Finance_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_Account__c</fullName>
    <label>Finance Account</label>
    <referenceTo>Finance_Account__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>