force-app/main/default/objects/Transaction__c/fields/Is_current_month_trasnaction__c.field-meta.xml
<CustomField>
    <fullName>Is_current_month_trasnaction__c</fullName>
    <formula>TODAY() &lt;  ADDMONTHS(Transaction_Date__c,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is current month trasnaction?</label>
    <type>Checkbox</type>
</CustomField>