force-app/main/default/objects/Transaction__c/fields/Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Asset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active asset.</errorMessage>
        <filterItems>
            <field>Asset.Status</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Please select an active asset.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>