force-app/main/default/objects/Transaction__c/fields/Related_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Bank Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>