force-app/main/default/objects/Transaction__c/fields/Related_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Related_Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Beneficiary</label>
    <referenceTo>Beneficiary__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>