force-app/main/default/objects/Transaction__c/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS</label>
    <referenceTo>SMS__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>