force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Finance_Account__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>Transaction_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>