force-app/main/default/objects/Transaction__c/listViews/FiNest_Transactions.listView-meta.xml
<ListView>
    <fullName>FiNest_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Related_Contact__c</columns>
    <columns>Related_Bank_Account__c</columns>
    <columns>Related_Beneficiary__c</columns>
    <filterScope>Everything</filterScope>
    <label>FiNest Transactions</label>
</ListView>